--- a/app/src/main/res/layout/activity_view_shifts.xml
+++ b/app/src/main/res/layout/activity_view_shifts.xml
@@ -21,7 +21,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"/>
 
-        <Button
+        <!--<Button
             android:id="@+id/btnAddShift"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -29,7 +29,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />-->
         <Button
             android:id="@+id/btnGoBack"
             android:layout_width="wrap_content"
